# CUDA-Accelerated-Computing

./: CMakeLists.txt  OpenCV_Build_Install_Guide.md  README.md  README_INSTALL
DSTimer/: DS_timer.cpp  DS_timer.h
advanced_matmul/: CMakeLists.txt  matmul_shared_singleBlock.cu
advanced_matmul/matmul_fp16_TC/: README  main.cpp  matmul.h  matmul_TC_singleBlock.cu  matmul_fp16_TC.cu  matmul_fp16_standard.cu  test_TC  test_TC.cu  test_TC_singleBlock  util.cpp
convolution/: CMakeLists.txt  conv2d_cpu.cpp  convolution-v1.cu  convolution.cu  convolution.h  convolution_cudnn.cu  main-v1.cpp  main.cpp
convolution/im2col/: conv2d_im2col.cpp
convolution/im2col_TC_mytrying/: convolution.cuh  main.cpp  util.cpp  util.h
image_rotation/: CMakeLists.txt  image_rotation.cu  image_rotation.cu.org  image_rotation.h  main.cpp  main.cpp.org  main_gray.cpp
image_rotation/cpp-version/: README  rotate_image_v1.cpp  rotate_image_v2.cpp  rotate_image_v3.cpp  rotate_image_v4.cpp  rotate_image_v4_warpAffine.cpp
image_rotation_without_OpenCV/: CMakeLists.txt  main.cpp
matmul/: .CMakeLists.txt.swp  CMakeLists.txt  cpu_matmul.cpp  matmul.cu  matmul_basic.cu  matmul_comparision.cu  matmul_stream.cu  matmul_unrolling.cu  matmul_unrolling_stream.cu
miscellaneous/: CMakeLists.txt  cudaEvent.cu  cudaEvent.cu.org  cudaEvent.cu.outputs.txt  cudaEvent.cu.v1  cudaEvent_multiGPUs.cu  cudaStream.cu  deviceQuery.cu  helper_cuda.h  plot_bandwidth.py  threadCounting.cu
parallel_reduction/: CMakeLists.txt  main.cpp  reduction.cu  reduction.hpp
pinned_memory/: CMakeLists.txt  pinned_memory.cu
ptx/: README  main.cpp  test1.cu
ptx/ptx-compile/: README  main_cudadriverAPI.cpp
ptx/ptxfile-gen/: README  test1.cpp1.ii  test1.cpp4.ii  test1.cudafe1.c  test1.cudafe1.cpp  test1.cudafe1.gpu  test1.cudafe1.stub.c  test1.fatbin  test1.fatbin.c  test1.module_id  test1.ptx  test1.sm_52.cubin
vecadd/: CMakeLists.txt  CMakeLists.txt.v0  CMakeLists.txt.v1  vecadd.cu
vecsum_multinode/: CMakeLists.txt  vecSum.cu  vecSum_multiNodes.cu  vecSum_stream.cu  vecSum_stream_multiGPUs.cu
